# mastack-lang

./: .gitignore
doc/: mastack-language-specification.md
src/: CMakeLists.txt
src/3rd/: CMakeLists.txt
src/3rd/greatest/: CMakeLists.txt
src/mastack/: CMakeLists.txt
src/mastack/common/: CMakeLists.txt  common.c  common.h
src/mastack/lexer/: CMakeLists.txt  error.c  error.h  lexer.c  lexer.h  line.c  line.h  token.c  token.h
src/mastack/memory/: CMakeLists.txt  memory.c  memory.h
src/mastack/object/: CMakeLists.txt  blob.c  blob.h  integer.c  integer.h
src/mastack/util/: CMakeLists.txt  buf_writer.c  buf_writer.h  imm_buf.c  imm_buf.h  mut_buf.c  mut_buf.h  vector.c
src/test/: CMakeLists.txt  test.c  test_common.c  test_lexer.c
